media-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media
  namespace: plexserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: media.palacpl.us
    external-dns.alpha.kubernetes.io/ttl: "120" #optional
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: "nginx"
  rules:
    - host: media.palacpl.us
      http:
        paths:
          - path: /transmission
            pathType: Prefix
            backend:
              service:
                name: transmission-transmission-openvpn
                port:
                  number: 80
          - path: /sonarr
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 80
          - path: /jackett
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 80
          - path: /radarr
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
          - path: /qbittorrent
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-gluetun
                port:
                  number: 8080

  tls:
    - hosts:
        - media.palacpl.us
      secretName: secure-tls
